<resources>
    <string name="app_name">turnip</string>
    <string name="title_activity_host">Host</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="start_button_text">Start</string>
    <string name="room_name_hint">Room name</string>
    <string name="room_name_error">Room name required</string>
    <string name="room_name_helper">Required</string>
    <string name="room_password_hint">Room password</string>
    <string name="spotify_logo">Spotify logo</string>
    <string name="spotify_switch_text">Play songs from Spotify</string>
    <string name="vote_mode_text">Vote to skip mode</string>
    <string-array name="vote_mode_options">
        <item>Majority</item>
        <item>None</item>
    </string-array>
    <string name="no_song_text_header">No one\'s playing anything</string>
    <string name="no_song_text_subtitle">Add some songs to get things started!</string>
    <string name="album_art_content_description">Song album art</string>
    <string name="sad_boombox_content_description">Sad boombox drawable</string>
    <string name="preference_file_key">ca.turnip.turnip.PREFERENCE_FILE_KEY</string>
    <string name="token_store_key">ca.turnip.turnip.TOKEN_STORE_KEY</string>
    <string name="shared_preference_token_key">ENCRYPTED_REFRESH_TOKEN</string>
    <string name="shared_preferences_iv">ENCRYPTION_IV</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search on Spotify</string>
    <string name="join_button_text">Join</string>
    <string name="leave_room_title">Leave room</string>
    <string name="leave_room_text_user">Are you sure you want to leave the room?</string>
    <string name="leave_room_text_host">Are you sure you want to leave the room?\n\nLeaving will close the room and all connected participants will be removed.</string>
    <string name="leave_room_positive">Leave</string>
    <string name="search_icon_description">Search icon</string>
    <string name="empty_search_list_header">Find songs to play</string>
    <string name="empty_search_body">Search your favorite songs on Spotify</string>
    <string name="no_results_found">No search results found</string>
    <string name="no_results_hints">We weren\'t able to find any songs, artists, or albums by that name.</string>
    <string name="ok">OK</string>
    <string name="install">Install</string>
    <string name="no_hosts_found">No nearby hosts found</string>
    <string name="no_hosts_hints">We weren\'t able to locate any nearby Turnip hosts. This can sometimes occur due to poor network connectivity. Swipe down to try searching again.</string>
    <string name="share_description">Share icon</string>
    <string name="spotify_description">Spotify icon</string>
    <string name="favorite_description">Favorite icon</string>
    <string name="by_string">by</string>
    <string name="share_text">Share</string>
    <string name="open_in_spotify_text">Open in Spotify</string>
    <string name="queue_label">Source</string>
    <string name="spotify_switch_error_text">Need at least one song source</string>
    <string name="host_string">Host</string>
    <string name="settings_title">Settings</string>
</resources>
