<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/roomListSwipeRefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorBackground"
    tools:context=".activities.RoomListActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/roomRecyclerView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:visibility="visible">

        </androidx.recyclerview.widget.RecyclerView>

        <LinearLayout
            android:id="@+id/noHostsFoundContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:id="@+id/noHostsFoundIconFiller"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginBottom="50dp"
                android:contentDescription="@string/search_icon_description"
                app:srcCompat="@drawable/ic_baseline_phonelink_off_24px" />

            <TextView
                android:id="@+id/noHostsFoundTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:fontFamily="@font/fredoka_one"
                android:text="@string/no_hosts_found"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/noHostsFoundHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:text="@string/no_hosts_hints"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>
    </FrameLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>