<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:gravity="bottom|center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/songAlbumText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp"
                tools:text="Swimming" />
        </LinearLayout>

        <ImageView
            android:id="@+id/songAlbumArt"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_margin="20dp"
            android:contentDescription="@string/album_art_content_description"
            android:visibility="visible"
            tools:srcCompat="@drawable/ic_album_art_placeholder" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/songAlbumArtPlaceholder"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:visibility="visible">

            <ProgressBar
                android:id="@+id/progressBar2"
                style="?android:attr/progressBarStyle"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>

        <TextView
            android:id="@+id/songNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="sans-serif"
            android:maxLines="2"
            android:scrollHorizontally="true"
            android:singleLine="false"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="Self Care (and some long text beside it to test how things work with multiple lines)" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/byText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/by_string"
                android:textAlignment="center"
                tools:text="by" />

            <TextView
                android:id="@+id/songArtistText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:ellipsize="end"
                android:maxLines="2"
                android:scrollHorizontally="true"
                android:singleLine="false"
                android:textAlignment="center"
                android:textColor="@color/white"

                tools:text="Mac Miller" />

        </LinearLayout>

        <View
            android:layout_width="150dp"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorLighterBackground"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:gravity="end"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/shareLinearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/shareIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/share_description"
                    app:srcCompat="@drawable/ic_baseline_share_24px"
                    tools:layout_editor_absoluteX="186dp"
                    tools:layout_editor_absoluteY="442dp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/share_text"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/openInSpotifyLinearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/spotifyIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/spotify_description"
                    app:srcCompat="@drawable/ic_spotify_logo" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/open_in_spotify_text"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/favoriteIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/favorite_description"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_baseline_favorite_24px" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>